[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# General info
name = "mpl_measurements"
version = "0.0.1"

# Requirements
requires-python = ">=3.12"

# Dependencies
dependencies = [
    "matplotlib",
    "numpy",
]

# Other metadata
authors = [
{ name="Ubaldo Tiberi", email="ubaldo.tiberi@gmail.com" },
]
description = "mpl_measurements add measurements to your matplotlib plots"
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
keywords = [
    "data-analysis",
    "measurements",
    "dataset",
    "data"
]

# For developers
[project.optional-dependencies]
build = ["pdm"]
dev = [
    "ruff",
    "build",
    "twine"
]

[project.urls]
"Homepage" = "https://github.com/ubaldot/mpl_measurements"
"Bug Tracker" = "https://github.com/ubaldot/mpl_measurements/issues"

# ===================================
# Formatting
# ===================================
[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]
